# bio-acai

./: AcaiUtil.hs  AcaiUtilTests.hs  Global.hs  LICENSE  Main.hs  Output.hs  README  README.md  Tests.hs  acai.cabal  acai.hs  bio-acai.cabal
data/pieces/: NC_003240.faa  NC_003241.faa  NC_003267.faa  NC_003270.faa  NC_003272.faa  NC_003273.faa  NC_003276.faa  NC_007410.faa  NC_007411.faa  NC_007412.faa  NC_007413.faa  NC_010628.faa  NC_010629.faa  NC_010630.faa  NC_010631.faa  NC_010632.faa  NC_010633.faa  NC_014000.faa  NC_014248.faa  NC_014249.faa  NC_014250.faa
data/small/: ANAVT.faa  NOSA0.faa  NOSP7.faa  NOSS1.faa
