-- For further documentation, see http://haskell.org/cabal/users-guide/

name:                bio-acai
version:             0.1.0.0
synopsis:            A script clustering by local alignment distance
homepage:            https://github.com/j-larson/bio-acai
license:             BSD3
license-file:        LICENSE
author:              Johan Larson
author:              Ben Darwin
maintainer:          johan.g.larson@gmail.com
-- copyright:           
category:            Bio
build-type:          Simple
cabal-version:       >=1.10

executable acai
  main-is:             Main.hs
  ghc-options:         -Wall -fno-warn-orphans
  build-depends:       base >=4.7 && <4.8,
                       cmdargs >= 0.10 && <0.11,
                       directory >= 1.2 && <1.3,
                       bio >=0.5 && <0.6,
                       hierarchical-clustering >=0.4 && <0.5
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  ghc-options:         -Wall
  build-depends:       base, hspec, bytestring,hierarchical-clustering >=0.4 && <0.5,bio >=0.5 && <0.6
  default-language:    Haskell2010
